# torchlite

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: linear.ipynb  mlp.ipynb
tests/: test_autograd.py  test_tensor.py
torchlite/: __init__.py
torchlite/autograd/: __init__.py  engine.py  ops.py  tensor.py
torchlite/nn/: __init__.py  activation.py  losses.py  module.py
torchlite/nn/layers/: __init__.py  conv.py  linear.py  sequential.py
torchlite/optim/: __init__.py  sgd.py
